--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Jenkins Docker Demo</title>
 </head>
 <body>
-    <h1>Hello from Jenkins + Docker 🚀</h1>
+    <h1>Hello from Jenkins + Docker and RUSHIKESH</h1>
     <p>This page is served from a Docker container.</p>
     <p>Built from GitHub and deployed via Jenkins.</p>
 </body>
